--- a/public/styles.css
+++ b/public/styles.css
@@ -79,14 +79,20 @@ h3 {
 .content p {
     padding-bottom: 10px;
 }
-.delete {
+.edit, .delete {
     position: absolute;
     top: 0;
     right: 0;
     border-radius: 50%;
     padding: 8px;
 }
-.delete:hover {
+.edit {
+    top: 50px;
+}
+.edit img {
+    width: 24px;
+}
+.edit:hover, .delete:hover {
     cursor: pointer;
     box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
 }
