--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,7 @@
     <%- include("./partials/nav.ejs") %>
 
         <div class="create-meal content">
-            <form method="POST" action="/all-meals/<%= meal.id %>">
+            <form data-doc="<%= meal.id %>" method="POST">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" value="<%= meal.title %>" required>
 
@@ -20,5 +20,30 @@
         </div>
 
     <%- include("./partials/footer.ejs") %>
+
+    <script>
+
+        const edit = document.querySelector('form');
+        edit.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            try {
+                const formData = new FormData(e.target);
+                const formDataObj = Object.fromEntries(formData.entries());
+                const endpoint = `/all-meals/${edit.dataset.doc}/edit`;
+                const response = await fetch(endpoint, {
+                                            method: 'PUT',
+                                            headers: {'Content-type': 'application/json'},
+                                            body: JSON.stringify(formDataObj)
+                                        });
+                const data = await response.json();
+                window.location.href = await data.redirect;
+            }
+            catch (err) {
+                console.log(err)
+            }
+        });
+    
+    </script>
+
     </body>
 </html>
